Easy Tables fully implemented
Current wight and difference labels appear onload (when you click "enter weight"
History button gets all data from database onload and displays on screen
Fixed target display message, refactored code (in case user enters a higher target weight than their current weight)
Still need to do a couple error checks

--- a/GetHealthyApp.csproj
+++ b/GetHealthyApp.csproj
@@ -43,6 +43,7 @@
       <DependentUpon>CalorieConverter.xaml</DependentUpon>
     </Compile>
     <Compile Include="DataModels\EnterWeight.cs" />
+    <Compile Include="DataModels\Historydb.cs" />
     <Compile Include="EnterWeight.xaml.cs">
       <DependentUpon>EnterWeight.xaml</DependentUpon>
     </Compile>
