--- a/GetHealthy/GetHealthy.UWP/project.json
+++ b/GetHealthy/GetHealthy.UWP/project.json
@@ -1,7 +1,12 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.3.4.224"
+    "Microsoft.Azure.Mobile.Client": "3.1.0",
+    "Microsoft.Bcl.Build": "1.0.21",
+    "Microsoft.Cognitive.CustomVision.Prediction": "1.0.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
+    "Newtonsoft.Json": "10.0.3",
+    "Xam.Plugin.Media": "3.0.1",
+    "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
     "uap10.0": {}
