--- a/GetHealthy/GetHealthy.Android/GetHealthy.Android.csproj
+++ b/GetHealthy/GetHealthy.Android/GetHealthy.Android.csproj
@@ -188,6 +188,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logo.PNG" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
